don't let (x) hide behind fixed navigation header
icon to close FocusedResult became unclickable when scrolling down

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1613,3 +1613,7 @@ img.error, img.loaded.error {
 .search-wrap {
   background: rgba(35, 35, 35, 1);
 }
+
+.sticky .closePreview {
+  right: 5em !important;
+}
